# openlist-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README-zh.md  README.md  claude_desktop_config.example.json  code-review-issues.md  mcp-config.example.json  pyproject.toml  test_explore.py  test_integration.py  test_task_api.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-compatibility.md  live-testing.md  review-response.md  structure-review.md
scripts/: check_task_api.py  explore_openlist.py  live_integration.py
src/openlist_mcp/: __init__.py  client.py  config.py  server.py  skills.py
src/openlist_mcp/tools/: __init__.py  admin.py  advanced.py  auth.py  fs.py  share.py  task.py  transfer.py
tests/: conftest.py  test_admin_tools.py  test_advanced_tools.py  test_client.py  test_config.py  test_docs.py  test_e2e.py  test_fs_tools.py  test_share_tools.py  test_skills.py  test_task_tools.py  test_tools_behavior.py  test_tools_validation.py  test_transfer_tools.py
