[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlist-mcp-server"
version = "0.2.0"
description = "MCP Server for OpenList - enables AI agents to manage files via OpenList API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "OpenList MCP Contributors" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
openlist-mcp = "openlist_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openlist_mcp"]
