[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlist-mcp-server"
version = "0.2.6"
description = "MCP Server for OpenList - enables AI agents to manage files via OpenList API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "OpenList MCP Contributors" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
openlist-mcp = "openlist_mcp.server:main"

[project.urls]
Homepage = "https://github.com/hbestm/openlist-mcp-server"
Repository = "https://github.com/hbestm/openlist-mcp-server"
Issues = "https://github.com/hbestm/openlist-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openlist_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
